--- a/_includes/portrait.html
+++ b/_includes/portrait.html
@@ -11,13 +11,17 @@
 
 <div class="portrait-wrapper">
   <a
-    {% if page.slug != member.slug %}
-      href="{{ member.url | relative_url | uri_escape }}"
-    {% endif %}
-    class="portrait"
-    data-style="{{ include.style }}"
-    aria-label="{{ member.name | default: "member link" | regex_strip }}"
-  >
+  {% if member.external_url %}
+    href="{{ member.external_url }}"
+    target="_blank" rel="noopener"
+  {% elsif page.slug != member.slug %}
+    href="{{ member.url | relative_url | uri_escape }}"
+  {% endif %}
+  class="portrait"
+  data-style="{{ include.style }}"
+  aria-label="{{ member.name | default: "member link" | regex_strip }}"
+>
+
     {% if type %}
       {% include icon.html icon=type.icon %}
     {% endif %}
