--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -5,20 +5,18 @@ layout: default
 <h1>{{ page.title }}</h1>
 
 {% assign tag = page.tag %}
-{% assign projects = site.projects | where_exp: "item", "item.tags contains tag" %}
+{% assign items = site.projects | where_exp: "item", "item.tags contains tag" %}
 
-{% include section.html %}
-
-{% if projects.size > 0 %}
-  {% for project in projects %}
+{% if items.size > 0 %}
+  {% for item in items %}
     {% include card.html
-      image=project.image
-      link=project.url
-      title=project.title
-      description=project.description
-      tags=project.tags
+      image=item.image
+      link=item.url
+      title=item.title
+      description=item.description
+      tags=item.tags
     %}
   {% endfor %}
 {% else %}
-  <p>No projects found with this tag.</p>
+  <p>No items found for this tag.</p>
 {% endif %}
